      10x speedup.
    - Validate field names, and only use valid known problem conf files.
    - Minor HTML syntax fix.
    - Minor template integration.
  * pupartslib/packagesdb.py
    - Reworked rdep metrics (block_count, rrdep_count, waiting_count) to
      calculate on-demand. Access methods are moved from Package to
      PackagesDB.

  [ Holger Levsen ]
  * piuparts.py:
    - Add to ignored_files:
      + /var/log/fontconfig.log (Closes: #703810) - Thanks to Hideki Yamane.
    - switch default Ubuntu distribution to "saucy".
  * Bump Standards-Version to 3.9.4.
  * Use /srv/piuparts.debian.org/ on piatti.debian.org as per DSA policy.
  * Provide instance configuration for pejacevic.d.o and piu-slave-bm-a.d.o.
  * Move README_piatti.txt and README_pejacevic.txt and update accordingly.
  * Provide two new helper scripts for running from git:
    update-piuparts-master-setup and update-piuparts-slave-setup, drop
    update-piuparts-setup.
  * Drop instances/forward.* files.
  * slave-bin/slave_run:
    - Run slave_cleanup before starting the slave.
  * slave-bin/detect_slave_problems: remove check limiting this script to be
    run on piatti only.
  * master-bin/prepare_backup: also backup sources.txt.

 -- Holger Levsen <holger@debian.org>  Wed, 15 May 2013 11:31:31 +0200

piuparts (0.50) unstable; urgency=low

  [ Andreas Beckmann ]
  * piuparts.py:
    - Add to ignored_files:
      + /var/lib/dpkg/arch
      + /usr/lib/python2.[67]/dist-packages/python-support.pth
        broken symlinks caused by python-support (see #635493 and #385775,
        thanks David Steele)
    - Call dpkg-deb with --nocheck to allow bad version numbers.
    - Pass unqualified package names to apt-cache show for lenny support.
    - Support plain URLs or local paths as --testdebs-repo argument and
      prepend/append "deb", "file://", and "./" as needed.
    - Improve the "dirname part contains a symlink" test and report
      overwritten files owned by other packages as failures.