@@ -176,6 +176,7 @@ piuparts (0.51) unstable; urgency=low
     - Reworked rdep metrics (block_count, rrdep_count, waiting_count) to
       calculate on-demand. Access methods are moved from Package to
       PackagesDB.
+    - Add a metric for the worst-case reverse-dependency chain length.
 
   [ Holger Levsen ]
   * piuparts.py:
